@@ -1,3 +1,10 @@
+2002-08-01  Daniel Jacobowitz  <drow@mvista.com>
+
+	Merge from mainline:
+	2002-07-31  Jakub Jelinek  <jakub@redhat.com>
+	* elf32-i386.c (elf_i386_copy_indirect_symbol): Swap tls_type
+	if _bfd_elf_link_hash_copy_indirect will swap got.refcount.
+
 2002-07-30  Daniel Jacobowitz  <drow@mvista.com>
 
 	Merge from mainline:
